logo alignment fix

--- a/css/ecloud-accounts-userregistration.css
+++ b/css/ecloud-accounts-userregistration.css
@@ -1,3 +1,6 @@
+html{
+	background:var(--color-main-background); 
+}
 
 #body-login .warning-messsage {
 	width: 100% !important;
